# aptos-core

./: CODEOWNERS
.github/workflows/: run-forge.yaml
api/: README.md
api/doc/: spec.json  spec.yaml
aptos-move/aptos-vm/src/: data_cache.rs
aptos-move/aptos-vm/src/delta_ext/: delta_change_set.rs
aptos-move/aptos-vm/src/parallel_executor/: storage_wrapper.rs
aptos-move/e2e-tests/src/: data_store.rs
aptos-move/framework/aptos-framework/sources/: genesis.move
aptos-node/src/: lib.rs
config/src/config/: consensus_config.rs
crates/aptos-telemetry-service/src/: custom_event.rs  index.rs
crates/transaction-emitter-lib/src/: args.rs  wrappers.rs
crates/transaction-emitter-lib/src/emitter/: account_minter.rs  mod.rs  submission_worker.rs
dashboards/: state-sync-v2.json
developer-docs-site/: sidebars.js
developer-docs-site/docs/guides/: system-integrators-guide.md
developer-docs-site/docs/sdks/: python-sdk.md
developer-docs-site/docs/tutorials/: first-transaction-sdk.md
developer-docs-site/static/examples/rust/first_transaction/: Cargo.toml
developer-docs-site/static/examples/rust/first_transaction/src/: main.rs
ecosystem/node-checker/vfn-check-client/: Cargo.toml
ecosystem/typescript/sdk/: CHANGELOG.md  package.json
sdk/: Cargo.toml
sdk/src/: transaction_builder.rs
terraform/aptos-node/: README.md
terraform/aptos-node-testnet/: main.tf  variables.tf
terraform/helm/aptos-node/: README.md  values.yaml
testsuite/: run_forge.sh
testsuite/forge-cli/src/: main.rs
testsuite/smoke-test/src/: txn_emitter.rs
(+22 files in other folders)
