[package]
name = "first-transaction"
version = "0.0.1"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos Rust tutorial files: First Transaction"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
once_cell = "1.13.0"
rand = "0.7.3"
url = "2.2.2"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1.0.61"
